--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ theme: jekyll-theme-cayman
 #- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: "German Villalobos"
-description: "To add"
+description: "Data Analyst / Data Scientist"
 
 
